update colour and logo

--- a/index.html
+++ b/index.html
@@ -16,30 +16,30 @@
             <div class="container mx-auto px-4 py-4 flex items-center justify-between">
                 <div class="flex items-center space-x-3">
                     <div
-                        class="w-10 h-10 bg-gradient-to-br from-orange-500 to-blue-500 rounded-lg flex items-center justify-center">
-                        <i data-lucide="heart" class="w-6 h-6 text-white"></i>
+                        class="w-10 h-10 bg-gradient-to-br rounded-lg flex items-center justify-center">
+                        <img src="./logo-hand.png" alt="">
                     </div>
                     <div>
-                        <h1 class="text-xl font-bold text-gray-900">BantuDigital</h1>
+                        <h1 class="text-xl font-bold text-[#096269]">Bantu<span class="text-[#0a315f]">Digital</span></h1>
                     </div>
                 </div>
                 <nav class="hidden md:flex space-x-6">
-                    <a href="#about" class="text-gray-600 hover:text-orange-600 transition-colors">
+                    <a href="#about" class="text-gray-600 hover:text-[#096269] transition-colors">
                         About
                     </a>
-                    <a href="#process" class="text-gray-600 hover:text-orange-600 transition-colors">
+                    <a href="#process" class="text-gray-600 hover:text-[#096269] transition-colors">
                         How We Help
                     </a>
-                    <a href="#impact" class="text-gray-600 hover:text-orange-600 transition-colors">
+                    <a href="#impact" class="text-gray-600 hover:text-[#096269] transition-colors">
                         Impact
                     </a>
-                    <a href="#careers" class="text-gray-600 hover:text-orange-600 transition-colors">
+                    <a href="#careers" class="text-gray-600 hover:text-[#096269] transition-colors">
                         Careers
                     </a>
-                    <a href="#faq" class="text-gray-600 hover:text-orange-600 transition-colors">
+                    <a href="#faq" class="text-gray-600 hover:text-[#096269] transition-colors">
                         FAQ
                     </a>
-                    <a href="#contact" class="text-gray-600 hover:text-orange-600 transition-colors">
+                    <a href="#contact" class="text-gray-600 hover:text-[#096269] transition-colors">
                         Contact
                     </a>
                 </nav>
@@ -54,16 +54,16 @@
                 </span>
 
                 <!-- Judul -->
-                <h1 class="text-4xl md:text-6xl font-bold text-gray-900 mb-6">Bantu Digitalisasi UMKM</h1>
+                <h1 class="text-4xl md:text-6xl font-bold text-[#096269] mb-6">Bantu Digi<span class="text-[#0a315f]">talisasi UMKM</span></h1>
 
                 <!-- Badge kecil (gratis & berdampak) -->
                 <div class="flex flex-wrap justify-center gap-4 mb-6">
                     <span
-                        class="inline-flex items-center rounded-full border border-orange-300 text-orange-700 text-lg py-2 px-4 font-semibold transition-colors">
+                        class="inline-flex items-center rounded-full border border-[#096269] text-[#096269] text-lg py-2 px-4 font-semibold transition-colors">
                         100% Gratis
                     </span>
                     <span
-                        class="inline-flex items-center rounded-full border border-blue-300 text-blue-700 text-lg py-2 px-4 font-semibold transition-colors">
+                        class="inline-flex items-center rounded-full border border-[#0a315f] text-[#0a315f] text-lg py-2 px-4 font-semibold transition-colors">
                         100% Berdampak
                     </span>
                 </div>
@@ -76,7 +76,7 @@
 
                 <!-- Tombol CTA (opsional, uncomment jika ingin) -->
                 <!--<div class="flex flex-col sm:flex-row gap-4 justify-center">
-                    <button class="inline-flex items-center bg-orange-600 hover:bg-orange-700 text-white px-8 py-3 rounded-lg text-lg font-semibold transition-colors">
+                    <button class="inline-flex items-center bg-[#096269] hover:bg-orange-700 text-white px-8 py-3 rounded-lg text-lg font-semibold transition-colors">
                         <i data-lucide="users" class="w-5 h-5 mr-2"></i>
                         Gabung Program
                     </button>
@@ -105,7 +105,7 @@
                     <!-- Card 1 -->
                     <div class="card border border-orange-200 rounded-xl hover:shadow-lg transition-shadow bg-white">
                         <div class="card-header text-center px-6 pt-8 pb-4">
-                            <i data-lucide="target" class="w-12 h-12 text-orange-600 mx-auto mb-4"></i>
+                            <i data-lucide="target" class="w-12 h-12 text-[#096269] mx-auto mb-4"></i>
                             <div class="card-title text-lg font-semibold text-orange-800 mb-2">Zero Barriers</div>
                         </div>
                         <div class="card-content px-6 pb-8">
@@ -150,7 +150,7 @@
                 <div class="grid md:grid-cols-4 gap-8">
                     <!-- Step 1 -->
                     <div class="text-center">
-                        <div class="w-16 h-16 bg-orange-600 rounded-full flex items-center justify-center mx-auto mb-4">
+                        <div class="w-16 h-16 bg-[#096269] rounded-full flex items-center justify-center mx-auto mb-4">
                             <i data-lucide="users" class="w-8 h-8 text-white"></i>
                         </div>
                         <h3 class="text-xl font-semibold text-gray-900 mb-2">1. UMKM Mendaftar</h3>
@@ -347,7 +347,7 @@
                                 <div class="card-description text-gray-600 text-sm">Internship • Remote</div>
                             </div>
                             <span
-                                class="badge badge-outline-orange border border-green-300 text-green-700 font-semibold px-3 py-1">Open</span>
+                                class="badge badge-outline-orange border border-[#096269] text-[#096269] font-semibold px-3 py-1">Open</span>
                         </div>
                         <div class="card-content p-6 pt-0">
                             <p class="text-gray-600 mb-4">
@@ -523,7 +523,7 @@
             </div>
         </section>
 
-        <section id="contact" class="py-16 bg-gradient-to-r from-orange-600 to-blue-600 text-white">
+        <section id="contact" class="py-16 bg-gradient-to-r from-[#0a315f] to-[#096269] text-white">
             <div class="container mx-auto px-4 max-w-6xl">
                 <div class="text-center mb-12">
                     <h2 class="text-3xl md:text-4xl font-bold mb-6">Ready to Go Digital?</h2>
@@ -576,7 +576,7 @@
                             <input required  placeholder="Business Name"
                                 class="w-full bg-white/20 border-white/30 text-white placeholder-white/70 px-4 py-3 rounded focus:outline-none" />
                             <button type="submit"
-                                class="w-full bg-white text-orange-600 hover:bg-gray-100 font-semibold py-3 rounded-lg flex items-center justify-center">
+                                class="w-full bg-white text-[#096269] hover:bg-gray-100 font-semibold py-3 rounded-lg flex items-center justify-center">
                                 Kirim Pesan
                                 <i data-lucide="arrow-right" class="w-4 h-4 ml-2"></i>
                             </button>
