--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="container mx-auto text-center max-w-4xl">
                 <!-- Badge utama -->
                 <span
-                    class="inline-flex items-center rounded-full border border-transparent bg-orange-100 text-orange-800 hover:bg-orange-200 mb-6 px-2.5 py-0.5 text-xs font-semibold transition-colors">
+                    class="inline-flex items-center rounded-full border border-transparent bg-[#0a315f]/10 text-[#096269] hover:bg-[#0a315f]/40 mb-6 px-2.5 py-0.5 text-xs font-semibold transition-colors">
                     🇮🇩 Dari Rakyat Untuk Rakyat Indonesia
                 </span>
 
